# Rag

./: .env  .gitignore  1.01_rag_own_text.ipynb  1.02_rag_with_pdf.ipynb  README.md  pyproject.toml
vectorstore/: chroma.sqlite3
